--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<% provide(:title, "MemoApp") %>
+<h1>メモあっぷ</h1>
+<p>ワンタップで色を変えてメモできるアプリ</p>
