--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
 <% provide(:title, "MemoApp") %>
-<h1>メモあっぷ</h1>
-<p>ワンタップで色を変えてメモできるアプリ</p>
+<div class="center jumbotron">
+  <h1>メモあっぷ</h1>
+  <h2>ワンタップで色を変えてメモできるアプリ</h2>
+    <%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "Sign In", '#', class: "btn btn-lg btn-success" %>
+</div>
