--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,6 +15,7 @@ $gray-medium-light: #eaeaea;
 
 body {
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 section {
@@ -64,22 +65,12 @@ p {
 }
 */
 
-.container > ul {
-  list-style: none;
-}
-/*
-.container > ul .title {
-  float: left;
-}
-*/
-.container > ul .logging {
+ul {
   float: right;
-  font-size: 20px;
-  padding-top: 9px;
 }
 
-.container > ul .logging:hover {
-  text-decoration: none;
+ul > li {
+  float: left;
 }
 
 /* header */
@@ -170,4 +161,18 @@ input {
   .form-control {
     color: $state-danger-text;
   }
+}
+
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
 }
