--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,16 @@
 <header class="navbar navbar-fixed-top navbar-default">
   <div class="container">
-    <ul>
-      <li class="title"><%= link_to "メモあっぷ", root_path, id: "logo" %></li>
-      <li class="logging"><%= link_to "Log in", '#' %></li>
-    </ul>
+    <%= link_to "メモあっぷ", root_path, id: "logo" %>
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+        <% if logged_in? %>
+          <li><%= link_to "Profile", current_user %></li>
+          <li><%= link_to "Settings", '#' %></li>
+          <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+        <% else %>
+          <li><%= link_to "Log in", login_path %></li>
+        <% end %>
+      </ul>
+    </nav>
   </div>
 </header>
