--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,5 +3,5 @@
   <h1>メモあっぷ</h1>
   <h2>ワンタップで色を変えてメモできるアプリ</h2>
     <%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
-    <%= link_to "Sign In", '#', class: "btn btn-lg btn-success" %>
+    <%= link_to "Log In", login_path, class: "btn btn-lg btn-success" %>
 </div>
