--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,10 @@
+<% if logged_in? %>
+  <div class="row">
+    <div class="col-md-12">
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
 <% provide(:title, "MemoApp") %>
 <div class="center jumbotron">
   <h1>メモあっぷ</h1>
@@ -5,3 +12,4 @@
     <%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
     <%= link_to "Log In", login_path, class: "btn btn-lg btn-success" %>
 </div>
+<% end %>
