--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,11 @@
 <footer class="navbar navbar-fixed-bottom navbar-default">
   <div class="container">
-
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+        <% if logged_in? %>
+          <li><%= link_to "作成", new_memo_path %></li>
+        <% end %>
+      </ul>
+    </nav>
   </div>
 </footer>
